bug fixes :filter-overlapping issue

--- a/components/common/filter-option-popup/options-data.module.css
+++ b/components/common/filter-option-popup/options-data.module.css
@@ -97,6 +97,12 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media (min-width:810px) and (max-width:1020px){
+  .outer-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+}
 
 @media screen and (max-width: 600px) {
   .outer-wrapper {
@@ -110,6 +116,3 @@
     }
   }
 }
-/* .main-container{
-  position: relative;
-} */
