--- a/components/common/filter-view/index.module.css
+++ b/components/common/filter-view/index.module.css
@@ -118,7 +118,7 @@
 
 @media (min-width: 800px) and (max-width: 900px) {
   .outer-wrapper {
-    margin-top: 22px;
+    margin-top: -8px;
   }
 }
 @media (min-width:1000px) and (max-width:1100px){
